infrastructure/k8s/forecasting-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecasting-service
  namespace: prod
  labels:
    app: forecasting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forecasting-service
  template:
    metadata:
      labels:
        app: forecasting-service
    spec:
      containers:
        - name: forecasting-service
          image: myregistry/airline-fare-optimization:forecasting-service-latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
