infrastructure/k8s/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-service
  namespace: prod
  labels:
    app: portal
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: portal
