infrastructure/k8s/pricing-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  namespace: prod
  labels:
    app: pricing-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: pricing-service
